# tmtk

./: CHANGES  COPYING  LICENSE  Makefile.in  README  README.md  TODO  configure  configure.ac  t
apps/: test.c  tm.c  tmainfo.c  view_callbacks.c
conf/: iso2788_custom.conf  tm.conf
helpers/: make_err_c.pl
maps/iso2788/: water.txt
maps/rdf/: USCity.daml  USRegionState.daml  coverpages.rdf  dc_same_subject.rdf  geofile-ont.daml  index.shtml.rdf  nature_test.rdf  nlnzdlsample-020806.rdf  rdfs-namespace.xml  xmlhack.rdf
maps/rss/: RSS-436.xml  benhammersley.rdf  bookreviews.xml  home.rss  mb_blog.rss  news.rss  rss1_0.xml  rssMarkPilgrimExample.xml  rss_1item.xml  slashdot.rdf  slashdot.xml  xmlhack.rdf
maps/xtm/: 2association_with_scope.xtm  2topic_simple_merge.xtm  3topic_simple_merge.xtm  apache.xtm  association.xtm  association_with_multiple_role_players_1.xtm  association_with_resource_ref.xtm  (+35 more)
src/: Doxyfile_CAPI  a_sidp.c  asidp.c  assert.c  assertion.c  cetree.h  cond.c  config.h.in  config_unix.h  coremodel.c  disclosureframework.c  integer.c  list.c  log.c  match.c  mem.c  model.c  omnivore.c  omnivore.h  params.c  procmodel.c  query.c  query.h  stack.c  stmql.c  stmql.h  storage.c  table.c  text.c  textset.c  tm.c  tm.h  tmassert.h  tmassertion.h  tmbasictypes.h  tmcond.h  tmdevel.h  tmdisclosureframework.h  tmerror.h  tmlist.h  (+26 more)
stores/: tmdefaultstores.h
www-df/: OLD_XTM_SIMPLE.c  df.c  df.h  iso2788.c  rdf_common.c  tmadl_parse.c  view_hitlist.c  view_index.c  view_role_playings.c  view_topic.c  xtm_simple.c  xtm_simple_NO_SOURCELOCATORS.c
(+46 files in other folders)
